styles/style.css
canvas{
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    
}
.html{
    overflow-x: hidden;
}
main{
    width: 100vw;
    z-index: 2;
    position: absolute;
    width: 100%;
    margin: 0px auto;
    padding: 120px 0px;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
}


#hero {
    background: url('assets/bricks.jpg') center center/cover no-repeat;
    /* linear-gradient(to bottom right, #c68c53, #e0b589); Soft brown gradient */
    color: #fefcfc; /* Dark text color */
    width: 50vw;
    height: 100vh;
    margin: 0 ;
    padding: 0;
    border-radius: 20px; /* Soften edges */
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    line-height: 1.5;
    display: flex;
    flex-direction: column;
    justify-content: auto; /* Center vertically */
    align-items: center;
}

@keyframes moveUpDown {
    0%, 100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-10px);
    }
}

.title {
    font-family: "Great Vibes", cursive;
    font-style: regular;
    font-weight:bolder;
    font-size: 70px;
    color: rgb(52, 23, 23);
    text-shadow: 8px 8px 8px rgba(209, 18, 18, 0.5);
    animation: moveUpDown 2s infinite;
}
.sub-title{
    font-family: "Great Vibes", cursive;
    font-style: regular;
    font-weight: 400;
    font-size: 50px;
    color: rgb(248, 247, 247);
    animation: moveUpDown 2s infinite;
}

@media (max-width: 768px) {
    .title {
        font-size: 30px; /* Adjust font size for smaller screens */
    }
}
section {
    grid-column: 2 / 8;
    padding: 1 rem;
}

.button-container {
    display: flex; /* for horizontal layout */
    align-items: center;
}
.location-btn, .products-btn{
    padding: 16px;
    font-size: 1em;
    font-weight: bold;
    color: white;
    border: none;
    cursor: pointer;
    background: linear-gradient(45deg, #ff6b6b, #f06595, #cc65e1);
    position: relative;
    display: inline-block;

    border-radius: 50px;
    transition: 0.2s;
    z-index: 100;
    text-decoration: none !important;
    color: inherit;
}
.location-btn:hover {
    box-shadow: 6px 6px rgba(0, 0, 0); 
  }
.dropbtn {
  padding: 16px;
  font-size: 1em;
  font-weight: bold;
  color: white;
  border: none;
  cursor: pointer;
  background: none;
  z-index: 100;
}

.dropdown-share {
  background: linear-gradient(45deg, #ff6b6b, #f06595, #cc65e1);
  position: relative;
  display: inline-block;

  border-radius: 50px;
  transition: 0.2s;
  z-index: 100;
}

.dropdown-share:hover {
  box-shadow: 6px 6px rgba(0, 0, 0); 
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  z-index: 3;
}

.dropdown-content button {
  color: rgb(251, 245, 245);
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.show {
  display: flex;
}

.button-share {
  border: none;
  background-color: black;
  padding: 0;
}

.button-share:hover {
  background-color: gray;
  cursor: pointer;
}


.button-icon {
  font-size: 1.5rem;
  color: pink;
  width: 100%;
}

/* Toggle music button styles */
.explore-button {
    position: fixed;
    top: 10px;
    right: 10px;
    background: linear-gradient(45deg, #ff6b6b, #f06595, #cc65e1);
    color: white;
    border: none;
    padding: 0.75em 1.5em;
    font-size: 1em;
    font-weight: bold;
    border-radius: 30px;
    cursor: pointer;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    z-index: 1000;
    transition: background 0.3s, transform 0.3s;
}

.explore-button:hover {
    background: linear-gradient(45deg, #ff6b6b, #f06595, #8f65e1);
    transform: scale(1.05);
}

.explore-button:active {
    transform: scale(0.95);
}

